GNOME Bugzilla – Bug 675243
random generation error
Last modified: 2012-05-01 21:08:22 UTC
On some font, I got this critical warnings: GLib-CRITICAL **: g_rand_int_range: assertion `end > begin' failed (gdb) where
+ Trace 230159
The font is: (gdb) frame 8 (gdb) p g_file_get_uri(job->file) $11 = 0x82f3b38 "file:///home/......../.fonts/Tengwar/Tengwarc.ttf" which is available on the web somewhere.
Pushed a fix for this to git master, thanks for the report!