font-widget: handle the case when we are unable to build a random string

If, for any reason, we fail to build a random string of characters from
the font file, don't pretend we're still able to draw the message
string, since we spawn critical warnings (and potentially corrupt
memory too).

https://bugzilla.gnome.org/show_bug.cgi?id=675243